--- a/src/main/resources/templates/form/addForm.html
+++ b/src/main/resources/templates/form/addForm.html
@@ -36,6 +36,21 @@
 
         <hr class="my-4">
 
+        <!-- single checkbox -->
+        <div>판매 여부</div>
+        <div>
+            <div class="form-check">
+                <input type="checkbox" id="open" name="open" class="form-check-input">
+                <input type="hidden" name="_open" value="on"> <!-- 체크박스 off하면 파라미터 전달안되는걸 막을려고 히든필드추가. 이름에 언더스코어 붙힌다. -->
+                <!--
+                FormItemController : item.open=true //체크 박스를 선택하는 경우
+                FormItemController : item.open=false //체크 박스를 선택하지 않는 경우
+                체크박스 해제 인식을 위해 스프링에서 제공한 트릭으로 위와 같이 코드를 짜면 itemController addItem에서 open을 null이 아닌 false로 인식.
+                -->
+                <label for="open" class="form-check-label">판매 오픈</label>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col">
                 <button class="w-100 btn btn-primary btn-lg" type="submit">상품 등록</button>
