--- a/src/main/resources/templates/form/addForm.html
+++ b/src/main/resources/templates/form/addForm.html
@@ -40,8 +40,9 @@
         <div>판매 여부</div>
         <div>
             <div class="form-check">
-                <input type="checkbox" id="open" name="open" class="form-check-input">
-                <input type="hidden" name="_open" value="on"> <!-- 체크박스 off하면 파라미터 전달안되는걸 막을려고 히든필드추가. 이름에 언더스코어 붙힌다. -->
+                <input type="checkbox" id="open" th:field="*{open}" class="form-check-input">
+                <!-- 이렇게하면 히든 필드 만들 필요 없음. 자동으로 언더바 open을 만들어준다. -->
+<!--                <input type="hidden" name="_open" value="on"> &lt;!&ndash; 체크박스 off하면 파라미터 전달안되는걸 막을려고 히든필드추가. 이름에 언더스코어 붙힌다. &ndash;&gt;-->
                 <!--
                 FormItemController : item.open=true //체크 박스를 선택하는 경우
                 FormItemController : item.open=false //체크 박스를 선택하지 않는 경우
@@ -50,7 +51,49 @@
                 <label for="open" class="form-check-label">판매 오픈</label>
             </div>
         </div>
+        <hr class="my-4">
 
+        <!-- multi checkbox -->
+        <div>
+            <div>등록 지역</div>
+            <!-- for each 문을 타임리프로 만든다. foreach에 있는 regions는 모델어트리뷰트로 넘긴 regions임. -->
+            <div th:each="region, regionStat : ${regions}" class="form-check form-check-inline">
+                <!-- th:field는 item.regions 폼 객체와 매핑하겠다는 뜻. -->
+                <input type="checkbox" th:field="*{regions}" th:value="${region.key}"
+                       class="form-check-input">
+                <!-- 타임리프 기능. 체크박스랑 레이블이랑 매핑하려면 id가 필요한데 없으니까 자동으로 생성해준다.th:field="*{regions}" id에 숫자붙여서 -->
+                <!-- #ids 자체가 타임리프의 유틸리티 객체이다. th:field를 사용하게 되면 name="regions"라고 자동생성되고,
+                 타임리프는 이 name과 인덱스를 적절히 조합해서 id를 만든다. 그니까 자동으로 만들어지는 것..
+                 #ids.prev('regions') 대신 똑같이 유니크한 regionStat.index 넣어도 된다.-->
+                <label th:for="${#ids.prev('regions')}"
+                       th:text="${region.value}" class="form-check-label">서울</label>
+            </div>
+        </div>
+        <hr class="my-4">
+
+        <!-- radio button -->
+        <div>
+            <div>상품 종류</div>
+            <div th:each="type : ${itemTypes}" class="form-check form-check-inline">
+                <input type="radio" th:field="*{itemType}" th:value="${type.name()}"
+                       class="form-check-input">
+                <label th:for="${#ids.prev('itemType')}" th:text="${type.description}"
+                       class="form-check-label">
+                    BOOK
+                </label>
+            </div>
+        </div>
+        <hr class="my-4">
+        <!-- SELECT -->
+        <div>
+            <div>배송 방식</div>
+            <select th:field="*{deliveryCode}" class="form-select">
+                <option value="">==배송 방식 선택==</option>
+                <option th:each="deliveryCode : ${deliveryCodes}" th:value="${deliveryCode.code}"
+                        th:text="${deliveryCode.displayName}">FAST</option>
+            </select>
+        </div>
+        <hr class="my-4">
         <div class="row">
             <div class="col">
                 <button class="w-100 btn btn-primary btn-lg" type="submit">상품 등록</button>
