--- a/src/main/resources/templates/form/editForm.html
+++ b/src/main/resources/templates/form/editForm.html
@@ -38,6 +38,55 @@
 
         <hr class="my-4">
 
+        <!-- single checkbox -->
+        <div>판매 여부</div>
+        <div>
+            <div class="form-check">
+                <!-- checked 속성까지 th:field가 자동으로 해준다. -->
+                <input type="checkbox" id="open" th:field="${item.open}" class="form-check-input">
+                <label for="open" class="form-check-label">판매 오픈</label>
+            </div>
+        </div>
+
+        <hr class="my-4">
+
+        <!-- multi checkbox -->
+        <div>
+            <div>등록 지역</div>
+            <div th:each="region, regionStat : ${regions}" class="form-check form-check-inline">
+                <input type="checkbox" th:field="${item.regions}" th:value="${region.key}"
+                       class="form-check-input">
+                <label th:for="${#ids.prev('regions')}"
+                       th:text="${region.value}" class="form-check-label">서울</label>
+            </div>
+        </div>
+        <hr class="my-4">
+
+        <!-- radio button -->
+        <div>
+            <div>상품 종류</div>
+            <!--잘 안쓰는 방법인데 모델에서 enum을 안넘기고 바로 파일경로를 지정해서 가져올 수 있다.-->
+            <div th:each="type : ${T(hello.itemservice.domain.item.ItemType).values()}" class="form-check form-check-inline">
+                <!--th:object="${item}" 해당 코드가 없으면 별표로 접근 못함-->
+                <input type="radio" th:field="${item.itemType}" th:value="${type.name()}"
+                       class="form-check-input">
+                <label th:for="${#ids.prev('itemType')}" th:text="${type.description}"
+                       class="form-check-label">
+                    BOOK
+                </label>
+            </div>
+        </div>
+        <hr class="my-4">
+        <!-- SELECT -->
+        <div>
+            <div>배송 방식</div>
+            <select th:field="${item.deliveryCode}" class="form-select">
+                <option value="">==배송 방식 선택==</option>
+                <option th:each="deliveryCode : ${deliveryCodes}" th:value="${deliveryCode.code}"
+                        th:text="${deliveryCode.displayName}">FAST</option>
+            </select>
+        </div>
+        <hr class="my-4">
         <div class="row">
             <div class="col">
                 <button class="w-100 btn btn-primary btn-lg" type="submit">저장</button>
